--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -12,6 +12,7 @@
     color: rgb(255, 187, 0);
     display: inline-block;
     margin-left: 50px;
+    cursor: default;
 }
 
 .links{
@@ -23,6 +24,7 @@
 .link{
     margin-left: 20px;
     display: inline-block;
+    text-decoration: none;
     font-size: 20px;
     font-weight: 700;
     color: rgb(255, 187, 0);
@@ -154,3 +156,40 @@
     margin-left: 45%;
     cursor: pointer;
   }
+
+  .modal, .overlay {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+}
+
+.overlay {
+    background: rgba(49,49,49,0.4);
+}
+.modal-content {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    line-height: 1.4;
+    background: #f1f1f1;
+    padding: 14px 28px;
+    border-radius: 3px;
+    max-width: 600px;
+    min-width: 300px;
+}
+
+.close-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 7px;
+}
+
+.btn {
+  cursor: pointer;
+}
