--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -2,7 +2,7 @@
     background-color: rgb(46, 46, 45);
     position: sticky;
     top: 0;
-    min-height: 80px;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     overflow: hidden;
@@ -12,7 +12,10 @@
     color: rgb(255, 187, 0);
     display: inline-block;
     margin-left: 50px;
-    cursor: default;
+    font-size: 35px;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 15px;
 }
 
 .links{
@@ -50,6 +53,7 @@
     padding: 10px;
     margin: 40px 20px;
     background-color: white;
+    overflow: auto;
 }
 
 .home-product-images{
@@ -67,6 +71,18 @@
     cursor: pointer;
     font-weight: bold;
     font-size: 16px;
+    margin-left: 30%;
+}
+
+.remove-from-cart {
+    background-color: crimson;
+    border: none;
+    padding: 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+    margin-left: 20%;
 }
 
 .add-to-cart:hover{
@@ -86,10 +102,11 @@
 
 .adding-or-removing-item-in-cart{
     display: inline-block;
-    background-color: chartreuse;
+    background-color: rgb(255, 187, 0);
     border: none;
     padding: 5px;
-    border-radius: 10px;
+    margin: 5px;
+    border-radius: 50px;
     cursor: pointer;
 }
 
@@ -172,24 +189,131 @@
 }
 .modal-content {
     position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 70%;
+    top: 12%;
     line-height: 1.4;
-    background: #f1f1f1;
+    background: hsl(0, 0%, 100%);
     padding: 14px 28px;
     border-radius: 3px;
-    max-width: 600px;
-    min-width: 300px;
+    width: 300px;
+    height: 450px;
+    border: rgb(255, 187, 0) 8px solid;
 }
 
 .close-modal {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 5px 7px;
+  padding: 5px 7px;
+  color: white;
+  background-color: black;
+  border-radius: 50px;
+  font-size: 15px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-left: 150px;
+}
+
+.close-modal:hover{
+  background-color: white;
+  color: black;
+  transition: all 0.2s;
+}
+
+.modal-cart, modal-items, modal-buttons {
+  width: 300px;
+}
+
+.modal-cart {
+  height: 25px;
+}
+
+.modal-items {
+  height: 320px;
+  overflow: auto;
+}
+
+.modal-buttons {
+  height: 50px;
 }
 
 .btn {
   cursor: pointer;
+}
+
+.purchase {
+  text-align: center;
+  margin-top: 18%;
+  font-size: 60px;
+}
+
+.purchase-button {
+  margin-left: 46.5%;
+  border-radius: 50px;
+  font-size: 20px;
+  padding: 20px;
+  border: 3px solid black;
+  background-color: white;
+  color: red;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.purchase-button:hover {
+  background-color: red;
+  color: white;
+  transition: all 0.2s;
+}
+
+.total-price {
+  font-size: 20px;
+  text-align: center; 
+  font-weight: bold;
+}
+
+.calories {
+  color: green;
+}
+
+.ingredients {
+  color: red;
+}
+
+.card-in-popup{
+  width:298px;
+  border-radius: 10px;
+  height: 50px;
+  border: 1px solid black;
+  margin-top: 5px;
+}
+
+.cart-popup-images{
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+}
+
+.cart-popup-name{
+  margin-top: -55px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+.cart-popup-price{
+  margin-left: 240px;
+  font-weight: bold;
+}
+.cart-popup-quantity{
+  margin-top: -23px;
+  text-align: center;
+}
+
+.return-after-purchase {
+  margin-left: 47%;
+  font-size: 20px;
+  text-decoration: none;
+  color: rgb(255, 187, 0);
+}
+
+.return-after-purchase:hover {
+  color: blue;
+  transition: all 0.2s;
 }
